index + private: fix possible overflow on long lines.
A single line of 65535 characters would overflow its container.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,11 @@ div:focus { outline: none !important; }
 
 .word-wrap { word-break: break-word; }
 
+.overflow-ellipsis {
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 .process-whitespaces { white-space: pre-line; }
 
 .tap-target-content h5  { margin: 0.093333rem 0 .656rem 0; }
